# splinter

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bootstrap.bat  bootstrap.sh  vcpkg.json
include/: bspline.h  bsplinebasis.h  bsplinebasis1d.h  bsplinebuilder.h  datapoint.h  datatable.h  definitions.h  function.h  knots.h  linearsolvers.h  mykroneckerproduct.h  saveable.h  serializer.h  splinter.h  utilities.h
include/cinterface/: cinterface.h  utilities.h
src/: bspline.cpp  bsplinebasis.cpp  bsplinebasis1d.cpp  bsplinebuilder.cpp  datapoint.cpp  datatable.cpp  function.cpp  knots.cpp  mykroneckerproduct.cpp  serializer.cpp  utilities.cpp
src/cinterface/: bspline.cpp  bsplinebuilder.cpp  cinterface.cpp  datatable.cpp  utilities.cpp
test/: bsplinetestingutilities.cpp  bsplinetestingutilities.h  main.cpp  operatoroverloads.cpp  testfunction.h  testingutilities.cpp  testingutilities.h
test/approximation/: bspline.cpp  pspline.cpp
test/general/: bspline.cpp  datatable.cpp  utilities.cpp
test/serialization/: bspline.cpp  datatable.cpp  eigentypes.cpp
test/unit/: bsplinebasis1d.cpp  knots.cpp
